# Addition-Subtraction-Chains

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  addtion_chain.py  bos-coster.py  bos_coster.py  cli.py  contfrac.py  contfrac_addchain.py  contfrac_aschain.py  gcf-chain.py  gcf_chain.py  generalizedcf.py  main.py  pyproject.toml  setup.py  test.py
examples/: basic_usage.py  large_numbers.py  naf_usage.py  strategy_comparison.py
